--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,6 @@
 .footer {
-    background-color: #222;
+    /* background-color: #222; */
+    background-color: #dc0d0d;
     color: white;
     text-align:left;
     align-content: center;
