--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,9 +1,10 @@
 .about-section {
-    margin: 6vh auto;
-    padding: 4vh 4vw;
-    width: min(90vw, 1100px);
+    margin: 6vh 0;
+    padding: 2vh 0;
+    width: 100%;
     color: #fff;
     text-align: initial;
+    box-sizing: border-box;
 }
 
 .about-title {
@@ -22,5 +23,6 @@
 .about-text {
     font-size: 1rem;
     line-height: 1.6;
-    max-width: 70ch;
+    text-align: justify;
+    width: 100%;
 }
