--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -61,3 +61,21 @@
 .project-link:hover {
   background-color: #0056b3;
 }
+
+@media (max-width: 768px) {
+  .project-card {
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .project-image {
+    width: 100%;
+    height: 200px;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+
+  .project-title {
+    font-size: 1.3em;
+  }
+}
