--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,10 +1,9 @@
 .footer {
-    /* background-color: #222; */
-    background-color: #dc0d0d;
+    border-top: 1px solid;
+    background-color: #222;
     color: white;
     text-align:left;
     align-content: center;
-    padding: 20px;
     min-height: 15vh;
     max-height: 15vh;                       
     font-size: small;
