--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
     border-top: 1px solid;
-    background-color: #e90000;
+    background-color: #222;
     color: white;
     text-align:left;
     align-content: center;
