--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,10 +2,39 @@
     border-top: 1px solid;
     background-color: #222;
     color: white;
-    text-align:left;
+    text-align: left;
     align-content: center;
     min-height: 15vh;
-    max-height: 15vh;                       
+    max-height: 15vh;
     font-size: small;
     width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+    width: 100%;
+}
+
+.social-links {
+    display: flex;
+    gap: 1rem;
+}
+
+.social-link {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.social-link:hover {
+    color: #007bff;
 }
